add logo to frontespice

--- a/front/frontespice.tex
+++ b/front/frontespice.tex
@@ -1,11 +1,14 @@
 \begin{titlepage}
     \begin{center}
+        \includegraphics[width=0.24\textwidth]{unime-logo.jpg} \\
+        [10pt]
         {{\Large{\textsc{Universit\`a degli studi di
         Messina}}}} \rule[0.1cm]{15.8cm}{0.1mm}
         \rule[0.5cm]{15.8cm}{0.6mm}
         {\small{\bf DIPARTIMENTO DI SCIENZE MATEMATICHE E INFORMATICHE, SCIENZE FISICHE E SCIENZE DELLA TERRA\\
         %Corso di Laurea triennale in Informatica L-31
-        Computer Science: Data Analysis - Bachelor's Degree L31}}
+        Bachelor's Degree in Computer Science L31 \\
+         Curriculum: Data Analysis}}
     \end{center}
     \vspace{15mm}
     
